--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/main/main.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/main/main.html
@@ -2,25 +2,25 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{portal/layout/popup/index_mall}">
+	layout:decorate="~{portal/layout/iv/eu/parts/popup/index}">
 
 <th:block layout:fragment="content">
 
-<div id="DIV_mallTitle" class="mall_page_title" th:text="#{DIVEU_LB_0074}"></div>
+<div id="DIV_mallTitle" class="mall_page_title" th:text="#{EUP_L_0074}"></div>
 	
 <div class="split-row"></div>		
 	
 <!-- 화면 2분할 영역 중 상단 div Start -->
 <div id="DIV_upperArea" style="border:none; float:center; width:100%; height:535px;">	
 	
-	<input type="hidden" id="IPT_mainTitle" name="mainTitleText"  th:value="#{DIVEU_LB_0074}">	<!-- Merchandize -->
+	<input type="hidden" id="IPT_mainTitle" name="mainTitleText"  th:value="#{EUP_L_0074}">	<!-- Merchandize -->
 	<input type="hidden" id="IPT_userCorp" name="userCorp" th:value="${userCorp}" />
 		
 	<!-- 위쪽  div: 좌상단 메뉴 영역 Start -->
 	<div id="DIV_upperAreaLeft" class="mall_upper_left_menu" style="float:left;">			
 		<div class="mall_upper_left_menu_title" th:text="Category"></div>
 		<div class="mall_upper_left_menu_text" th:each="userCategoryDto : ${categoryList}">
-			<a style="text-decoration:none" th:href="@{'/portal/corp/eu/scm/parts/merchandize/product/main'(mcSeq=${userCategoryDto.mcSeq})}" th:text="${userCategoryDto.categoryName}"></a>
+			<a style="text-decoration:none" th:href="@{'[[${BASE_PATH}]]/merchandize/product/main'(mcSeq=${userCategoryDto.mcSeq})}" th:text="${userCategoryDto.categoryName}"></a>
 		</div>					
 	</div>
 	<!-- 위쪽  div: 좌상단 메뉴 영역 End -->
@@ -34,7 +34,7 @@
 						<div class="block-header">
 							<div class="mall_part_title"></div>
 							<div class="block-button-area">
-								<button id="BTN_goCart" th:text="#{DIVEU_BTN_0018}"></button>  <!-- Cart -->
+								<button id="BTN_goCart" th:text="#{EUP_B_0018}"></button>  <!-- Cart -->
 							</div>
 						</div>
 					</div>
@@ -70,11 +70,11 @@
 
 	<!-- 화면 2분할 영역 중 하단 div Start -->
 	<div class="block-header">
-		<div class="block-ㅡmallmaintitle" style="padding-top: 15px;" th:text="#{DIVEU_LB_0075}"></div>	<!-- Recommend Product -->
+		<div class="block-ㅡmallmaintitle" style="padding-top: 15px;" th:text="#{EUP_L_0075}"></div>	<!-- Recommend Product -->
 		<div class="block-button-area">
-			<button class="prdAddBtn" th:text="#{DIVEU_BTN_0019}"></button>  <!-- Add to Cart -->
+			<button class="prdAddBtn" th:text="#{EUP_B_0019}"></button>  <!-- Add to Cart -->
 			<div class="split"></div>
-			<button class="prdOdrBtn" th:text="#{DIVEU_BTN_0020}"></button>  <!-- Buy Now -->
+			<button class="prdOdrBtn" th:text="#{EUP_B_0020}"></button>  <!-- Buy Now -->
 		</div>
 	</div>
 
@@ -136,7 +136,7 @@
 </div>
 <!-- 화면 2분할 영역 중 하단 div End -->	
 		
-<form id="FORM_cart" method="post" autocomplete="off" action="/portal/corp/eu/scm/parts/merchandize/cart/main">
+<form id="FORM_cart" method="post" autocomplete="off" action="[[${BASE_PATH}]]/merchandize/cart/main">
 	<div id="cartFormDiv"></div>
 </form>
 <form id="FORM_order" method="post" autocomplete="off">
@@ -186,12 +186,12 @@ $('.prdAddBtn').click(function()
  	    	
  		$.ajax(
 		{
-		    url:'/portal/corp/eu/scm/parts/merchandize/cart/cart',
+		    url:'[[${BASE_PATH}]]/merchandize/cart/cart',
 		    type:'post', 
 			data: $("#FORM_cart").serialize(),
 		    success: function(data) 
 		    {
-		    	alert("[[#{DIVEU_MSG_0032}]]");	// Added selected prodct in the shpping cart.
+		    	alert("[[#{EUP_M_0032}]]");	// Added selected prodct in the shpping cart.
 		    	location.reload();		        
 		    }
 		});
@@ -230,7 +230,7 @@ function isCheckedChkBox()
 	var checkedLen = $("input[name=productCheckbox]:checked").length;
  	if (checkedLen < 1) 
  	{
- 		alert("[[#{DIVEU_MSG_0031}]]");	// Please select product.
+ 		alert("[[#{EUP_M_0031}]]");	// Please select product.
    		return false;
  	} else 
  	{
