--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/main/main_admin.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/main/main_admin.html
@@ -2,23 +2,23 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{portal/layout/popup/index_mall}">
+	layout:decorate="~{portal/layout/iv/eu/parts/popup/index}">
 
 <th:block layout:fragment="content">
 
-<div id="DIV_mallTitle" class="mall_page_title" th:text="#{DIVEU_LB_0074}"></div>
+<div id="DIV_mallTitle" class="mall_page_title" th:text="#{EUP_L_0074}"></div>
 	
 <div class="split-row"></div>		
 	
 <!-- 화면 2분할 영역 중 상단 div Start -->
 <div id="DIV_upperArea" style="border:none; float:center; width:100%; height:535px;">	
 	
-	<input type="hidden" id="IPT_mainTitle" name="mainTitleText"  th:value="#{DIVEU_LB_0074}">
+	<input type="hidden" id="IPT_mainTitle" name="mainTitleText"  th:value="#{EUP_L_0074}">
 		
 	<!-- 위쪽  div: 좌상단 메뉴 영역 Start -->
 	<div id="DIV_upperAreaLeft" class="mall_upper_left_menu" style="float:left;">
-		<div class="mall_upper_left_menu_text"><a class="item" th:href="@{/portal/corp/eu/scm/parts/merchandize/category/main_admin}" th:text="#{DIVEU_LB_0061}"></a></div>	<!-- Manage Category -->
-		<div class="mall_upper_left_menu_text"><a class="item" th:href="@{/portal/corp/eu/scm/parts/merchandize/product/main_admin}" th:text="#{DIVEU_LB_0073}"></a></div>	<!-- Manage Product -->
+		<div class="mall_upper_left_menu_text"><a class="item" th:href="@{[[${BASE_PATH}]]/merchandize/category/main_admin}" th:text="#{EUP_L_0061}"></a></div>	<!-- Manage Category -->
+		<div class="mall_upper_left_menu_text"><a class="item" th:href="@{[[${BASE_PATH}]]/merchandize/product/main_admin}" th:text="#{EUP_L_0073}"></a></div>	<!-- Manage Product -->
 	</div>
 	<!-- 위쪽  div: 좌상단 메뉴 영역 End -->
 			
@@ -31,7 +31,7 @@
 						<div class="block-header">
 							<div class="mall_part_title"></div>
 							<div class="block-button-area">
-								<button id="BTN_fileUpload">[[#{DIVEU_LB_0198}]]</button>  <!-- 메인 이미지 변경 버튼 -->
+								<button id="BTN_fileUpload">[[#{EUP_L_0198}]]</button>  <!-- 메인 이미지 변경 버튼 -->
 							</div>
 						</div>
 					</div>
@@ -67,11 +67,11 @@
 
 	<!-- 화면 2분할 영역 중 하단 div Start -->
 	<div class="block-header">
-		<div class="block-ㅡmallmaintitle" style="padding-top: 15px;" th:text="#{DIVEU_LB_0075}"></div>	<!-- Recommend Product -->
+		<div class="block-ㅡmallmaintitle" style="padding-top: 15px;" th:text="#{EUP_L_0075}"></div>	<!-- Recommend Product -->
 		<div class="block-button-area">
-			<button class="prdAddBtn" th:text="#{DIVEU_BTN_0009}"></button>  <!-- Add -->
+			<button class="prdAddBtn" th:text="#{EUP_B_0009}"></button>  <!-- Add -->
 			<div class="split"></div>
-			<button class="prdDelBtn" th:text="#{DIVEU_BTN_0010}"></button>  <!-- Delete -->
+			<button class="prdDelBtn" th:text="#{EUP_B_0010}"></button>  <!-- Delete -->
 		</div>
 	</div>
 
@@ -230,7 +230,7 @@ $("input:checkbox[name='productCheckbox']").click(function()
 // 파일 업로드 2차 팝업
 $('#BTN_fileUpload').click(function() 
 {	
-	var url = '/portal/corp/eu/scm/parts/merchandize/main/main_fileupload';	
+	var url = '[[${BASE_PATH}]]/merchandize/main/main_fileupload';	
 	win = window.open(url, "FileUploadPopup", "width=720,height=250");
 });
 
@@ -238,7 +238,7 @@ $('#BTN_fileUpload').click(function()
 // 추천상품 추가 팝업
 $('.prdAddBtn').click(function() 
 {	
-	var url = '/portal/corp/eu/scm/parts/merchandize/recommendproduct/main_admin';	
+	var url = '[[${BASE_PATH}]]/merchandize/recommendproduct/main_admin';	
 	var win2 = window.open(url, "RecommendProductPopup", "width=820,height=880");
 });
 
@@ -250,7 +250,7 @@ $('.prdDelBtn').click(function()
 	var checkedLen = $("input[name=productCheckbox]:checked").length;	
  	if (checkedLen < 1) 
  	{
- 		alert("[[#{DIVEU_MSG_0021}]]");	// Please select targets to delete.
+ 		alert("[[#{EUP_M_0021}]]");	// Please select targets to delete.
    		return false;
  	} else 
  	{
@@ -261,7 +261,7 @@ $('.prdDelBtn').click(function()
  	    	
  		$.ajax(
 		{
-		    url:'/portal/corp/eu/scm/parts/merchandize/recommendproduct/delete',
+		    url:'[[${BASE_PATH}]]/merchandize/recommendproduct/delete',
 		    type:'post', 
 			data: $("#FORM_delete").serialize(),
 		    success: function(data) 
@@ -294,7 +294,7 @@ function updateSortNum()
 {
 	$.ajax(
 	{
-	    url:'/portal/corp/eu/scm/parts/merchandize/general/changeSortNumber',
+	    url:'[[${BASE_PATH}]]/merchandize/general/changeSortNumber',
 	    type:'post', 
 		data: $("#FORM_list").serialize(),
 	    success: function(data) 
