--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/product/view.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/product/view.html
@@ -2,18 +2,18 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"	
-	layout:decorate="~{portal/layout/popup/index_mall}">
+	layout:decorate="~{portal/layout/iv/eu/parts/popup/index}">
 
 <th:block layout:fragment="content">
 
 <div class="block-header">
-	<div class="block-title" th:text="#{DIVEU_LB_0085}"></div>
+	<div class="block-title" th:text="#{EUP_L_0085}"></div>
 	<div class="block-button-area">		
-		<button class="prdModBtn" th:text="#{DIVEU_BTN_0022}"></button>  <!-- Modify -->
+		<button class="prdModBtn" th:text="#{EUP_B_0022}"></button>  <!-- Modify -->
 		<div class="split"></div>
-		<button class="prdDelBtn" th:text="#{DIVEU_BTN_0010}"></button>  <!-- Delete -->
+		<button class="prdDelBtn" th:text="#{EUP_B_0010}"></button>  <!-- Delete -->
 		<div class="split"></div>
-		<button class="prdLisBtn" th:text="#{DIVEU_BTN_0004}"></button>  <!-- Back -->
+		<button class="prdLisBtn" th:text="#{EUP_B_0004}"></button>  <!-- Back -->
 	</div>
 </div>
 
@@ -22,46 +22,46 @@
 	<table class="mallcondition">
 		<tbody>
 			<tr>
-				<th th:text="#{DIVEU_LB_0063}"></th>	<!-- Category -->
+				<th th:text="#{EUP_L_0063}"></th>	<!-- Category -->
 				<td th:text="${productDto.categoryCode}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0080}"></th>	<!-- Product Code -->
+				<th th:text="#{EUP_L_0080}"></th>	<!-- Product Code -->
 				<td th:text="${productDto.materialNo}"></td>
 			</tr>
 			
 			<tr th:each="langDto : ${productNameLangDtos}">
-				<th th:text="|#{DIVEU_LB_0081}(${langDto.name})|"></th>	<!-- Product Name -->				
+				<th th:text="|#{EUP_L_0081}(${langDto.name})|"></th>	<!-- Product Name -->				
 				<td th:text="${langDto.text}"></td>					
 			</tr>
 			
 			<tr th:each="langDto : ${productDescLangDtos}">
-				<th th:text="|#{DIVEU_LB_0082}(${langDto.name})|"></th>	<!-- Product Description -->
+				<th th:text="|#{EUP_L_0082}(${langDto.name})|"></th>	<!-- Product Description -->
 				<td><textarea name="productDescs" class="custom-ui" readonly>[[${langDto.text}]]</textarea></td>					
 			</tr>
 			
 			<tr>
-				<th th:text="#{DIVEU_LB_0066}"></th>	<!-- Display Y/N -->
+				<th th:text="#{EUP_L_0066}"></th>	<!-- Display Y/N -->
 				<td th:text="${productDto.fgDisplay}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0069}"></th>	<!-- Reg.User -->
+				<th th:text="#{EUP_L_0069}"></th>	<!-- Reg.User -->
 				<td th:text="${productDto.regUsername}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0070}"></th>	<!-- Reg.Date -->
+				<th th:text="#{EUP_L_0070}"></th>	<!-- Reg.Date -->
 				<td th:text="${#temporals.format(productDto.regDate, 'yyyy.MM.dd')}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0071}"></th>	<!-- Mod.User -->
+				<th th:text="#{EUP_L_0071}"></th>	<!-- Mod.User -->
 				<td th:text="${productDto.modUsername}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0072}"></th>	<!-- Mod.Date -->
+				<th th:text="#{EUP_L_0072}"></th>	<!-- Mod.Date -->
 				<td th:text="${#temporals.format(productDto.modDate, 'yyyy.MM.dd')}"></td>
 			</tr>			
 			<tr>
-				<th th:text="#{DIVEU_LB_0083}"></th>	<!-- Image -->
+				<th th:text="#{EUP_L_0083}"></th>	<!-- Image -->
 				<td>					
 					<div id="attachFile">
 						<article th:replace="/portal/corp/eu/common/bbs/attach_file :: attachFileView(${fileUploads})"></article>	
@@ -73,21 +73,21 @@
 </form>
 </div>
 
-<form id="FORM_modify" method="post" action="/portal/corp/eu/scm/parts/merchandize/product/modify">
+<form id="FORM_modify" method="post" action="[[${BASE_PATH}]]/merchandize/product/modify">
 	<input type="hidden" name="mpSeq" th:value="${productDto.mpSeq}" />
 </form>
 
-<form id="FORM_delete" method="post" action="/portal/corp/eu/scm/parts/merchandize/product/delete">
+<form id="FORM_delete" method="post" action="[[${BASE_PATH}]]/merchandize/product/delete">
 	<input type="hidden" name="mpSeq" th:value="${productDto.mpSeq}" />
 </form>
 
-<form id="FORM_main" method="post" action="/portal/corp/eu/scm/parts/merchandize/product/main_admin"></form>
+<form id="FORM_main" method="post" action="[[${BASE_PATH}]]/merchandize/product/main_admin"></form>
 		
 		
 <script type="application/javascript">
 $(document).ready(function() 
 {
-// 	$('#DIV_mallTitle').text( '[[#{DIVEU_LB_0085}]]' );	// Product Details
+// 	$('#DIV_mallTitle').text( '[[#{EUP_L_0085}]]' );	// Product Details
 });
 
 // 수정 화면 이동
@@ -104,7 +104,7 @@ $('.prdDelBtn').click(function()
 	{
 		$.ajax(
 		{
-		    url:'/portal/corp/eu/scm/parts/merchandize/product/delete',
+		    url:'[[${BASE_PATH}]]/merchandize/product/delete',
 		    type:'post', 
 			data: $("#FORM_delete").serialize(),
 		    success: function(data) 
